add average rating

--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -2,6 +2,11 @@
   <%= @quote.text %>
 </h2>
 
+<p>
+  Average rating:
+  <%= @quote.ratings.average(:number) %>
+</p>
+
 <%= form_with model: [@quote, @rating], data: {turbo: false} do |f| %>
   <%= f.object.errors.full_messages.to_sentence %>
   <%= f.number_field :number, in: Rating::NUMBER_RANGE %>
