--- a/app/views/quotes/show.html.erb
+++ b/app/views/quotes/show.html.erb
@@ -7,7 +7,7 @@
   <%= @quote.ratings.average(:number) %>
 </p>
 
-<%= form_with model: [@quote, @rating], data: {turbo: false} do |f| %>
+<%= form_with model: [@quote, @rating] do |f| %>
   <%= f.object.errors.full_messages.to_sentence %>
   <%= f.number_field :number, in: Rating::NUMBER_RANGE %>
   <%= f.submit %>
